--- a/Reservation/appsettings.json
+++ b/Reservation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=Reservation;User ID=sa;Password=19881213;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=185.55.224.80;Initial Catalog=yabande1_event;User ID=yabande1_event;Password=123qwe!@#$;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
