--- a/Reservation/appsettings.json
+++ b/Reservation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=185.55.224.80;Initial Catalog=yabande1_event;User ID=yabande1_event;Password=123qwe!@#$;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=185.94.98.228;Initial Catalog=eventDB;User ID=eventDB;Password=123qwe!@#$;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
